--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
 pycparser==2.22
+pyngrok==7.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
